added ProjectPlan aspect